New endpoints for testing (#2)
* added get results endpoints

* adde swagger definitions

* moved max memory test

* corrected endpoints  in tests

* removed unused import
