# rest/api/static/swagger.yml
@@ -306,6 +306,70 @@ paths:
           description: istestfinished get status success. It can return True/False
         404:
           description: istestfinished failure in situations where the framework container name / compose_id is wrong.
+  /getcontainerfile/{compose_id}/{container_service_name}:
+    post:
+      tags:
+        - estuary-deployer
+      summary: gets a file from the docker-compose environment. Useful to get the test results file
+      consumes:
+        - application/json
+        - application/x-www-form-urlencoded
+      produces:
+        - application/json
+      parameters:
+        - name: compose_id
+          in: path
+          description: docker-compose environment id returned by the deploystart action.
+          required: true
+          type: string
+        - name: container_service_name
+          in: path
+          description: target container to get file from
+          required: true
+          type: string
+        - name: file
+          in: body
+          description: target container file path to get
+          required: false
+          schema:
+            $ref: '#/components/schemas/file'
+      responses:
+        200:
+          description: The content of the file in plain text
+        404:
+          description: The file content could not be read
+  /getcontainerfolder/{compose_id}/{container_service_name}:
+    post:
+      tags:
+        - estuary-deployer
+      summary: gets a folder as zip from the docker-compose environment. Useful to get the test results folder
+      consumes:
+        - application/json
+        - application/x-www-form-urlencoded
+      produces:
+        - application/zip
+      parameters:
+        - name: compose_id
+          in: path
+          description: docker-compose environment id returned by the deploystart action.
+          required: true
+          type: string
+        - name: container_service_name
+          in: path
+          description: target container to get folder from
+          required: true
+          type: string
+        - name: file
+          in: body
+          description: target container folder path to get
+          required: false
+          schema:
+            $ref: '#/components/schemas/folder'
+      responses:
+        200:
+          description: The content of the folder found on the target container as zip archive
+        404:
+          description: The content of the folder found on the target container could not be obtained
   /deploystop/{compose_id}:
     get:
       tags:
@@ -375,6 +439,9 @@ components:
     file:
       type: object
       example: '{"file" : "/etc/hostname"}'
+    folder:
+      type: object
+      example: '{"folder" : "/etc"}'
     istestfinishedfile:
       type: object
       example: '{"file" : "/tmp/is_test_finished"}'
